welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: Boolean does not take parameters
    else (die2==6){
                  ^